# substrate-node-template

./: Cargo.toml  README.md
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: dot.rs  github.rs  lib.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
